// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widows renders 0 1`] = `
Array [
  .c0 {
  widows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 0;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders function 1`] = `
Array [
  .c0 {
  widows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  widows: has;
}

<div
    className="c0"
  />,
  .c0 {
  widows: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  widows: has;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders invalid theme path 1`] = `
Array [
  .c0 {
  widows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  widows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  widows: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  widows: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders negative number 1`] = `
Array [
  .c0 {
  widows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  widows: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  widows: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  widows: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    widows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    widows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    widows: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    widows: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    widows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    widows: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    widows: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    widows: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    widows: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    widows: July;
  }
}

@media April {
  .c0 {
    widows: August;
  }
}

@media January {
  .c0 {
    widows: September;
  }
}

@media April {
  .c0 {
    widows: November;
  }
}

@media June {
  .c0 {
    widows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    widows: July;
  }
}

@media April {
  .c0 {
    widows: August;
  }
}

@media January {
  .c0 {
    widows: September;
  }
}

@media April {
  .c0 {
    widows: November;
  }
}

@media June {
  .c0 {
    widows: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    widows: January;
  }
}

@media April {
  .c0 {
    widows: December;
  }
}

@media January {
  .c0 {
    widows: April;
  }
}

@media April {
  .c0 {
    widows: May;
  }
}

@media June {
  .c0 {
    widows: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    widows: January;
  }
}

@media April {
  .c0 {
    widows: December;
  }
}

@media January {
  .c0 {
    widows: April;
  }
}

@media April {
  .c0 {
    widows: May;
  }
}

@media June {
  .c0 {
    widows: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders postitive number 1`] = `
Array [
  .c0 {
  widows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  widows: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders string 1`] = `
Array [
  .c0 {
  widows: July;
}

<div
    className="c0"
  />,
  .c0 {
  widows: July;
}

<div
    className="c0"
  />,
  .c0 {
  widows: June;
}

<div
    className="c0"
  />,
  .c0 {
  widows: June;
}

<div
    className="c0"
  />,
]
`;

exports[`widows renders valid theme path 1`] = `
Array [
  .c0 {
  widows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  widows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  widows: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  widows: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
